[project]
name = "planner-agent-writer"
version = "0.1.0"
description = "A planning agent backend for writing citation-backed blog drafts."
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "pydantic-settings",
    "sqlmodel",
    "langchain-openai",
    "langchain-core",
    "langgraph",
    "langgraph-checkpoint-sqlite",
    "aiosqlite",
    "tavily-python",
    "slowapi",
]

[tool.fastapi]
entrypoint = "backend.app.main:app"

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["frontend*"]